try to make sure the background doesn't jump around

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    /* background-size: cover; */
     background-attachment: fixed;
 }
